Basically init service
