# backend/internal/api/auth_refresh_token.go
@@ -1,0 +1,11 @@
+package api
+
+import (
+	"context"
+
+	"github.com/ksusonic/niti/backend/pgk/genapi"
+)
+
+func (s *Server) AuthRefreshToken(ctx context.Context, request genapi.AuthRefreshTokenRequestObject) (genapi.AuthRefreshTokenResponseObject, error) {
+	return genapi.AuthRefreshToken200JSONResponse{}, nil
+}
