# backend/internal/models/jwt.go
@@ -1,0 +1,7 @@
+package models
+
+type JWTAuth struct {
+	AccessToken  string
+	RefreshToken string
+	JTI          string
+}
